[gd_scene load_steps=4 format=3 uid="uid://b1032b58nmwc7"]

[ext_resource type="Script" path="res://Scenes/battle_encounter_component.gd" id="1_yl2mg"]
[ext_resource type="PackedScene" uid="uid://cs5utohgbsl3k" path="res://Scenes/Snake.tscn" id="2_740f2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mvx3j"]

[node name="BattleEncounterComponent" type="Area2D"]
scale = Vector2(10, 10)
script = ExtResource("1_yl2mg")
MonsterType = ExtResource("2_740f2")

[node name="AreaCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mvx3j")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TimeRemaining" type="Label" parent="Timer"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "time"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
